--- a/home.html
+++ b/home.html
@@ -9,9 +9,10 @@
     <link href="media.css" rel="stylesheet" />
     <link href="modal.css" rel="stylesheet" />
     <link href="animations.css" rel="stylesheet" />
-    <script src="main.js" defer></script>
+    <!-- <script src="main.js" defer></script>
     <script src="modal.js" defer></script>
-    <script src="validation.js" defer></script>
+    <script src="validation.js" defer></script> -->
+    <script src="main-compiled.js" defer></script>
   </head>
   <body id="bookmarks-body">
     <header>
